Atualização na função do calculo de consumo ideal por numero de pessoas na casa para atualizar no grafico